Closed
Bug 535997
Opened 16 years ago
Closed 16 years ago
crash when importing Outlook 2000 address book [@ nsOutlookMail::CreateList]
Categories
(Thunderbird :: Migration, defect)
Tracking
(thunderbird3.0 .1-fixed)
VERIFIED
FIXED
Thunderbird 3.1a1
| Tracking | Status | |
|---|---|---|
| thunderbird3.0 | --- | .1-fixed |
People
(Reporter: kevinraftery, Assigned: timeless)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
|
2.17 KB,
patch
|
Bienvenu
:
review+
neil
:
superreview+
standard8
:
approval-thunderbird3.0.1+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-GB; rv:1.9.1.3) Gecko/20090824 Firefox/3.5.3
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-GB; rv:1.9.1.5) Gecko/20091204 Thunderbird/3.0
Tools > Import... > Address Books > Outlook > crash!
Mozilla Crash Reporter contents:
Add-ons: {972ce4c6-7e08-4474-a285-3208198ce6fd}:3.0
BuildID: 20091204171430
CrashTime: 1261259548
Email: [my email address]
InstallTime: 1261130626
ProductName: Thunderbird
SecondsSinceLastCrash: 7477
StartupTime: 1261259305
Theme: classic/1.0
Throttleable: 1
URL:
Vendor:
Version: 3.0
This report also contains technical information about the state of the application when it crashed.
Reproducible: Always
Steps to Reproduce:
1. Tools
2. Import
3. Address Books
4. Outlook
It doesn't matter whether Outlook is open or closed. And the problem occurs even when I've booted in Safe mode.
Actual Results:
The application went away, leaving only the Mozilla Crash Reporter.
Expected Results:
If it couldn't import the Outlook address book for some reason, it would have been nice to tell me what it was choking on. Maybe I could change an offending address book entry.
Comment 1•16 years ago
|
||
please post your crash report id
http://kb.mozillazine.org/Breakpad#Viewing_crash_reports
Severity: normal → critical
Keywords: crash
Sorry. Most recent crash report is
bp-6b0f5363-7de0-45e9-b1ba-ce07f2091219
I'll retype that to see if I got it right:
bp-6b0f5363-7de0-45e9-b1ba-ce07f2091219
From a quick glance it looks like it crashed in nsOutlookMail::CreateList
and the crash reason was EXCEPTION_ACCESS_VIOLATION.
Hope that helps.
Signature nsOutlookMail::CreateList(unsigned short const*, nsIAddrDatabase*, IMAPIProp*, nsIImportFieldMap*)
UUID 6b0f5363-7de0-45e9-b1ba-ce07f2091219
Time 2009-12-19 13:52:51.588976
Uptime 243
Last Crash 7477 seconds before submission
Product Thunderbird
Version 3.0
Build ID 20091204171430
Branch 1.9.1
OS Windows NT
OS Version 5.1.2600 Service Pack 2
CPU x86
CPU Info GenuineIntel family 6 model 9 stepping 5
Crash Reason EXCEPTION_ACCESS_VIOLATION
Crash Address 0xc
User Comments
Processor Notes
Crashing Thread
Frame Module Signature [Expand] Source
0 thunderbird.exe nsOutlookMail::CreateList mailnews/import/outlook/src/nsOutlookMail.cpp:974
1 thunderbird.exe nsOutlookMail::ImportAddresses mailnews/import/outlook/src/nsOutlookMail.cpp:929
2 thunderbird.exe ImportOutlookAddressImpl::ImportAddressBook mailnews/import/outlook/src/nsOutlookImport.cpp:602
3 thunderbird.exe ImportAddressThread mailnews/import/src/nsImportAddressBooks.cpp:1039
4 nspr4.dll _PR_NativeRunThread nsprpub/pr/src/threads/combined/pruthr.c:426
5 nspr4.dll pr_root nsprpub/pr/src/md/windows/w95thred.c:122
6 mozcrt19.dll _callthreadstartex objdir-tb/mozilla/memory/jemalloc/src/threadex.c:348
7 mozcrt19.dll _threadstartex objdir-tb/mozilla/memory/jemalloc/src/threadex.c:326
8 kernel32.dll BaseThreadStart
963 LPSPropValue aValue = NULL ;
971 hr = pUserList->GetProps(properties, 0, &aValueCount, &aValue) ;
aValue = 0x0
973 SBinaryArray *sa=(SBinaryArray *)&aValue->Value.bin;
This doesn't have to crash, it's a magical alias
974 if (!sa || !sa->lpbin)
so we crash here.
Summary: crash when importing Outlook 2000 address book → crash when importing Outlook 2000 address book [@ nsOutlookMail::CreateList]
http://msdn.microsoft.com/en-us/library/cc765749.aspx
If the lpPropTagArray parameter is set to NULL to retrieve all of the properties of the object and no properties exist, GetProps does the following:
...
* Sets lppPropArray to NULL.
971 hr = pUserList->GetProps(properties, 0, &aValueCount, &aValue) ;
HRESULT GetProps(
LPSPropTagArray lpPropTagArray,
ULONG ulFlags,
ULONG FAR * lpcValues,
LPSPropValue FAR * lppPropArray
);
Building this requires a working windows environment. I'm using a mac.... I believe this is roughly the right patch.
Assignee: nobody → timeless
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #418552 -
Flags: review?
Updated•16 years ago
|
Attachment #418552 -
Flags: review? → review?(bienvenu)
Comment 5•16 years ago
|
||
Comment on attachment 418552 [details] [diff] [review]
untested
[Checkin: Comment 6 & 10]
looks OK, thx.
Attachment #418552 -
Flags: superreview?(neil)
Attachment #418552 -
Flags: review?(bienvenu)
Attachment #418552 -
Flags: review+
Updated•16 years ago
|
Attachment #418552 -
Flags: superreview?(neil) → superreview+
Updated•16 years ago
|
Keywords: checkin-needed
Comment 6•16 years ago
|
||
Comment on attachment 418552 [details] [diff] [review]
untested
[Checkin: Comment 6 & 10]
http://hg.mozilla.org/comm-central/rev/77f7d8c11ea7
"approval-thunderbird3.0.1=?":
crash fix, hopefully low risk.
Attachment #418552 -
Attachment description: untested → untested
[Checkin: Comment 6]
Attachment #418552 -
Flags: approval-thunderbird3.0.1?
Updated•16 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.1a1
Version: unspecified → Trunk
Comment 7•16 years ago
|
||
(In reply to comment #6)
> "approval-thunderbird3.0.1=?":
> crash fix, hopefully low risk.
Given that this patch says untested, it needs at least some confirmation of testing that we haven't just completely broken outlook import. Did David test import of address books from outlook?
If not, this needs testing and confirmation of import of mailing lists for address books in Outlook before I'll consider accepting it for a stable branch.
Flags: in-litmus?
Whiteboard: [needs confirmation of testing outlook import]
Comment 8•16 years ago
|
||
simple import of address books from outlook still works, including a simple mailing list, but I could not recreate the original crash, so I can't verify that this fixes a crash.
Comment 9•16 years ago
|
||
Comment on attachment 418552 [details] [diff] [review]
untested
[Checkin: Comment 6 & 10]
Ok, thanks for the confirmation David.
a=Standard8
Attachment #418552 -
Flags: approval-thunderbird3.0.1? → approval-thunderbird3.0.1+
Updated•16 years ago
|
Keywords: checkin-needed
Whiteboard: [needs confirmation of testing outlook import] → [branch checkin required]
Comment 10•16 years ago
|
||
Comment on attachment 418552 [details] [diff] [review]
untested
[Checkin: Comment 6 & 10]
http://hg.mozilla.org/releases/comm-1.9.1/rev/0f8dcf94ada1
Attachment #418552 -
Attachment description: untested
[Checkin: Comment 6] → untested
[Checkin: Comment 6 & 10]
Updated•16 years ago
|
| Reporter | ||
Comment 11•16 years ago
|
||
As the original reporter of this problem, I could test a beta version if you like.
Comment 12•16 years ago
|
||
(In reply to comment #11)
> As the original reporter of this problem, I could test a beta version if you
> like.
Thanks for the offer. The builds aren't quite complete yet - give it another hour or two and they should be available in:
http://ftp.mozilla.org/pub/mozilla.org/thunderbird/nightly/latest-comm-1.9.1/
(you want builds dated 4th Jan or later).
Comment 13•16 years ago
|
||
Kevin, can you confirm your crash is gone using http://ftp.mozilla.org/pub/mozilla.org/thunderbird/nightly/latest-comm-1.9.1/
| Reporter | ||
Comment 14•16 years ago
|
||
I'd like to help. But on the page you mention, I find:
thunderbird-3.0.2pre.en-US.win32.zip -- which contains many files and I'm not sure whether I should run any of them
thunderbird-3.0.2pre.en-US.win32.installer.exe -- which, when I open it, offers to install Shredder rather than Thunderbird.
Sorry, but I may need a bit more advice on how to test the new release.
| Assignee | ||
Comment 15•16 years ago
|
||
use the installer. shredder is the name we use for interim builds (things that aren't release candidates), don't worry, it's basically the same product, with a bit of branding to remind you that it isn't an official release.
| Reporter | ||
Comment 16•16 years ago
|
||
I confirm that it imported my Outlook 2000 address book successfully.
Obviously you can close this issue. Maybe however I should open a separate thread to do with the fact that, when it imported my mail messages, Thunderbird marked them all "unread". It takes a long time to go through every folder and mark all its messages "read".
Thanks for the good work you've done.
Comment 17•16 years ago
|
||
Odd that the importer didn't get the read state right. But you can select multiple folders in the folder pane, and using the context menu, mark all messages read with a single command.
Comment 18•16 years ago
|
||
(In reply to comment #16)
> I confirm that it imported my Outlook 2000 address book successfully.
Can you paste the version you used ?
Status: RESOLVED → VERIFIED
| Reporter | ||
Comment 19•16 years ago
|
||
David, you're right, thanks. It marks as "read" the contents of any folder I use that technique on, although subfolders aren't affected. I can live with that.
Ludovic, I used Win32 Shredder/3.0.2/pre and Outlook 2000 version 9.0.0.2711
Updated•16 years ago
|
Keywords: verified-thunderbird3.0
| Assignee | ||
Comment 20•16 years ago
|
||
thanks for your report and verifying. could you possibly file another report about this unread thing? preferably creating a tiny database which triggers the problem (one you'd be willing to share publicly). hopefully we have some provision for turning on logging... [note that i don't actually work on thunderbird, only crashes that i guess are easily fixed, as this one turned out to be :), so someone else will hopefully help you the next time.]
| Reporter | ||
Comment 21•16 years ago
|
||
timeless, I'd like to contribute a failing example of the unread thing. Not sure how one sends a tiny database, though; maybe the .pst file? In any case, I'm very busy for the next two weeks and may be delayed in getting you something.
Comment 22•16 years ago
|
||
Kevin, testcase files are often badly, badly needed in import-land. possible for you to create a new bug and attach the file? (sanitized of personal info if necessary) reduced testcases even better
| Assignee | ||
Comment 23•16 years ago
|
||
my guess is it's the pst file, but please don't address me. i'm a low level guy, i pretend to not know :).
| Reporter | ||
Comment 24•16 years ago
|
||
Wayne, when you say "create a new bug" are you referring to the original problem, the crash? I don't see why you'd need that, as you've already fixed that bug. But if what you want is a .pst file just for the sake of adding one to your ongoing testing collection, you can copy any that I send for timeless' purposes.
I'm inclined to agree to timeless' request, and send a .pst file if that will help regarding the read/unread issue (which I presume will get a separate thread in this forum). Especially if I stand to benefit in a certain way:
I've grown tired of buying Windows computers that get noticeably slower every year. My Apple computers don't do that. I suspect part of the reason is that my anti-virus software gets bigger every day. So I'm ready to consider unplugging my Windows computer from the internet, and doing all my web browsing and e-mail on the Apple computer, and never again owning an anti-virus program. If that is the strategy, then I hope that converting from Outlook to Thunderbird, then moving the Thunderbird mailbox to the Apple, will allow life to continue...
Am I dreaming? If not, then I have a vested interest in moving to a stable Thunderbird, and am very willing to help you guys create that.
Comment 25•16 years ago
|
||
(In reply to comment #24)
> Wayne, when you say "create a new bug" are you referring to the original
> problem, the crash? I don't see why you'd need that, as you've already fixed
> that bug. But if what you want is a .pst file just for the sake of adding one
> to your ongoing testing collection, you can copy any that I send for timeless'
> purposes.
Any bug, fixed or not, benefits from having a testcase file/message. A testcase helps ensure that a patch which *in theory* fixes a bug, does in fact fix the problem. And a testcase file can be used to used to create automated tests, which help avoid *future* problems caused by future code changes.
So again, testcase files are badly, badly needed in import-land, outlook being just one type of import. you can attach testcase files to bugs. If a testcase has sensitive data and you don't know how to "sanitize" it, perhaps one of the people I have just cc will be able to help you.
> Am I dreaming? If not, then I have a vested interest in moving to a stable
> Thunderbird, and am very willing to help you guys create that.
I don't think you are dreaming :) But there are bugs to be fixed [1], and there are tests to be automated (which require testcases) - so your help will be appreciated.
[1] open outlook bugs
https://bugzilla.mozilla.org/buglist.cgi?field0-0-0=short_desc;bug_severity=blocker;bug_severity=critical;bug_severity=major;bug_severity=normal;bug_severity=minor;bug_severity=trivial;resolution=---;query_format=advanced;type0-0-0=substring;value0-0-0=outlook;product=MailNews%20Core;product=Thunderbird
| Reporter | ||
Comment 26•16 years ago
|
||
I take your points, Wayne. And I see that there is indeed a long list of bugs related to Outlook import.
I've put a note in my To Do list, to attach a sanitized .pst file to some bug report or another. But I'm incommunicado for much of the next two weeks.
I do hope that it will be possible to move my Thunderbird mail file from Windows to Apple and resume work there...
Updated•15 years ago
|
Crash Signature: [@ nsOutlookMail::CreateList]
Updated•11 years ago
|
Flags: in-litmus?
You need to log in
before you can comment on or make changes to this bug.
Description
•