Bug 535997 crash when importing Outlook 2000 address book [@ nsOutlookMail::CreateList]. r=bienvenu sr=neil.